cleanup to remove IDE warnings